New Background edit

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,7 +40,7 @@ section.container .jumbotron {
 }
 
 .jumbotron-image {
-  background-image: url("./assets/img/denise-schuld-T5RCT7Qm-Eg-unsplash.jpg");
+  background-image: url("Developer-Portfolio/assets/img/denise-schuld-T5RCT7Qm-Eg-unsplash.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
