--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,7 +40,7 @@ section.container .jumbotron {
 }
 
 .jumbotron-image {
-  background-image: url("../img/denise-schuld-T5RCT7Qm-Eg-unsplash.jpg");
+  background-image: url("../img/Background.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -48,7 +48,7 @@ section.container .jumbotron {
 }
 
 .modal-jumbo {
-  background-image: url("http://placehold.it/150x80?text=IMAGE");
+  background-image: url("../img/placeHolder.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -56,7 +56,7 @@ section.container .jumbotron {
 }
 
 #img-modal-horiseon .jumbotron {
-  background-image: url("../img/Horiseon\ Full\ Page\ Part\ 1\(Header\).png");
+  background-image: url("../img/Horiseon.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
