--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,11 @@
+/* Navigation font styling  */
 .nav {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
 }
 
+/* Footer CSS */
 footer {
   background-color: #2f2f2f;
   color: #fff;
@@ -12,21 +14,25 @@ footer {
   margin-top: 3% !important;
 }
 
+/* Navigation placement  */
 .navbar .navbar-nav {
   float: none;
   font-size: larger;
 }
 
+/* Section Container Margin top */
 section.container {
   margin-top: 3% !important;
 }
 
+/* Section Container and Jumbotron Box-Size */
 section.container .jumbotron {
   border-radius: 6px;
   padding-left: 15px;
   padding-right: 15px;
 }
 
+/* About Id Box and Frame */
 #About {
   padding-top: 15px;
   padding-bottom: 48px;
@@ -35,10 +41,12 @@ section.container .jumbotron {
   background-color: #eee;
 }
 
+/* Contact-me padding */
 #contact-me {
   padding-top: 3em;
 }
 
+/* Jumbotron/Background Image */
 .jumbotron-image {
   background-image: url("../img/Background.jpg");
   background-position: center center;
@@ -47,6 +55,7 @@ section.container .jumbotron {
   height: 100vh;
 }
 
+/* Blank Image Placeholder Img */
 .modal-jumbo {
   background-image: url("../img/placeHolder.png");
   background-position: center center;
@@ -55,6 +64,7 @@ section.container .jumbotron {
   height: 40vh;
 }
 
+/* Horiseon placeHolder */
 #img-modal-horiseon .jumbotron {
   background-image: url("../img/Horiseon.png");
   background-position: center center;
@@ -65,6 +75,8 @@ section.container .jumbotron {
 .nav-link:active {
   color: white;
 }
+
+/* Portfolio img and font styling*/
 #portfolio-jumbo img {
   width: 100%;
   height: 100%;
@@ -73,6 +85,7 @@ section.container .jumbotron {
   font-weight: bold;
 }
 
+/* Hovering Img Styling and Transition */
 #portfolio-jumbo .img-portfolio img:hover {
   -o-transition: 0.5s;
   -ms-transition: 0.5s;
@@ -83,6 +96,7 @@ section.container .jumbotron {
   cursor: pointer;
 }
 
+/* Modal Description Box */
 #modal-descrip .jumbotron {
   padding: 15px;
 }
