--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,17 @@ section.container .jumbotron {
   background-size: cover;
   height: 40vh;
 }
+
+
+/* Ernest Picture */
+#img-modal-Ernest .jumbotron {
+  background-image: url("../img/Ernest.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 40vh;
+}
+
 .nav-link:active {
   color: white;
 }
